# mint

./: .gitignore  README.md  meson.build
assets/: meson.build
src/: battery.c  common.h  main.c  meson.build  poppins_light.c  splash.c  text.c
systemd-units/: meson.build  mint-splash.service
